Overlay & z-index fixed

--- a/css/popup.css
+++ b/css/popup.css
@@ -5,7 +5,7 @@ top:100px;
 left:35%;
 width : 400px;
 height : 275px;
-z-index:51;
+z-index:100;
 border-color: #D2D2D2;
 background:#f5f5f5;
 border-right: 1px solid #DDDDDD;
@@ -35,7 +35,7 @@ top:10px;
 right:10px;
 font-family:Arial;
 cursor: url(../pics/pointer.png) 0 0, auto;
-z-index: 100;
+z-index: 10;
 }
 
 div#blueLine {
